# RapaKinectForWindows

./: CMakeLists.txt  README.md
cmake/: RapaFindKinectForWindows.cmake
include/: RKFWCOMObjectSharedPtr.h  RKFWCaptureSettings.h  RKFWCapturedImage.h  RKFWColorCameraSettings.h  RKFWCriticalSectionEnterer.h  RKFWFaceTracker.h  RKFWFaceTrackerInternals.h  RKFWFaceTrackerResult.h  RKFWImage.h  RKFWImageConverter.h  RKFWImageFormat.h  RKFWMemoryBuffer.h  RKFWSensor.h  RKFWSensorInternals.h  RKFWSensorManager.h  RKFWSensorManagerInternals.h  RKFWSkeletonTrackingData.h  RKFWVector3.h
samples/: CMakeLists.txt
samples/RapaKinectForWindowsSimpleTest/: CMakeLists.txt  Main.cpp
samples/RapaKinectForWindowsViewer/: CMakeLists.txt  Main.cpp  RKFWQCameraWidget.cpp  RKFWQCameraWidget.h  RKFWQColorCameraSettingsWidget.cpp  RKFWQColorCameraSettingsWidget.h  RKFWQFaceTrackerTestWidget.cpp  RKFWQFaceTrackerTestWidget.h  RKFWQImageWidget.cpp  RKFWQImageWidget.h  RKFWQSensorManagerWidget.cpp  RKFWQSensorManagerWidget.h  RKFWQSensorWidget.cpp  RKFWQSensorWidget.h  RKFWQSkeletonTrackingDataWidget.cpp  RKFWQSkeletonTrackingDataWidget.h
src/: RKFWCOMObjectSharedPtr.cpp  RKFWCaptureSettings.cpp  RKFWCapturedImage.cpp  RKFWColorCameraSettings.cpp  RKFWCriticalSectionEnterer.cpp  RKFWFaceTracker.cpp  RKFWFaceTrackerInternals.cpp  RKFWFaceTrackerResult.cpp  RKFWImage.cpp  RKFWImageConverter.cpp  RKFWImageFormat.cpp  RKFWMemoryBuffer.cpp  RKFWSensor.cpp  RKFWSensorInternals.cpp  RKFWSensorManager.cpp  RKFWSensorManagerInternals.cpp  RKFWSkeletonTrackingData.cpp
